fixed spacing bugs

--- a/src/contact.scss
+++ b/src/contact.scss
@@ -1,8 +1,8 @@
 .contact {
-    padding: 8rem;
+    padding: 0 8rem 8rem 8rem;
 
     @media (max-width: 900px) {
-      padding: 2rem;
+      padding: 0 2rem 2rem 2rem;
     }
 }
 
